[package]
name = "octolib"
version = "0.1.0"
authors = ["Hermann Krumrey <hermann@krumreyh.com>"]

[dependencies]
libc = { path = "deps/libc", default-features = false }
serde = { version = "1.0.15", default-features = false }
serde_derive = { version = "1.0.15", default-features = false}
#core = { path = "deps/libcore" }
