[package]
name = "sample"
version = "0.1.0"
authors = ["Hermann Krumrey <hermann@krumreyh.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
core = { path = "../../invasive-rust-rust/src/libcore" }
#libc = { path = "../../invasive-rust-libc", default-features = false }
octolib = { path = "../octolib" }